# SimRob

./: .clang-format  CMakeLists.txt  Makefile  README.md
Debug/: SimRob  makefile
Debug/src/: subdir.mk
include/: index_buffer.hpp  logger.hpp  renderer.hpp  settings.hpp  utils.hpp  vertex_array.hpp  vertex_buffer.hpp  vertex_buffer_layout.hpp
resources/shaders/: Basic.shader
src/: gui.cpp  index_buffer.cpp  logger.cpp  main.cpp  renderer.cpp  robot.cpp  utils.cpp  vertex_array.cpp  vertex_buffer.cpp  vertex_buffer_layout.cpp
